[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/BeanBoy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/score.gd" type="Script" id=3]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Death.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/coin2.gd" type="Script" id=7]
[ext_resource path="res://script/coin3.gd" type="Script" id=8]
[ext_resource path="res://script/Death.gd" type="Script" id=9]
[ext_resource path="res://Assets/Enemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/Lives_count.gd" type="Script" id=11]
[ext_resource path="res://script/Enemy3.gd" type="Script" id=12]
[ext_resource path="res://script/Enemy2.gd" type="Script" id=13]
[ext_resource path="res://script/speedPotion.gd" type="Script" id=14]
[ext_resource path="res://script/healPotion.gd" type="Script" id=15]
[ext_resource path="res://Scenes/HealPotion.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/SpeedPotion.tscn" type="PackedScene" id=17]
[ext_resource path="res://script/Level_1.gd" type="Script" id=18]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[node name="Level_1" type="Spatial"]
script = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -1.04318, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/CollisionShape"]
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.765537, 0 )

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.4158, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 13.3046, 0 )
fov = 73.0

[node name="Coins" type="Spatial" parent="."]

[node name="coin" parent="Coins" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -6.59148, 0, 0 )

[node name="coin2" parent="Coins" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -11.5112, -99.5172, 0 )
script = ExtResource( 7 )

[node name="coin3" parent="Coins" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -2.23517, -21.2808, -13.4734 )
script = ExtResource( 8 )

[node name="PowerUps" type="Spatial" parent="."]

[node name="HealPotion" parent="PowerUps" instance=ExtResource( 16 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.899, -20.5963, 8.28875 )
script = ExtResource( 15 )

[node name="SpeedPotion" parent="PowerUps" instance=ExtResource( 17 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.8417, -15.5918, 0 )
script = ExtResource( 14 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Coins_label" type="Label" parent="Control"]
margin_right = 421.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )
text = "you have:        coins"

[node name="Lives_label" type="Label" parent="Control"]
margin_top = 28.0
margin_right = 421.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 4 )
text = "you have:        lives"

[node name="Coins_count" type="Label" parent="Control"]
margin_left = 96.0
margin_right = 247.0
margin_bottom = 71.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
script = ExtResource( 3 )

[node name="Lives_count" type="Label" parent="Control"]
margin_left = 95.0
margin_top = 30.0
margin_right = 246.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
script = ExtResource( 11 )

[node name="Area" parent="." instance=ExtResource( 6 )]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -16.3151, 0 )
script = ExtResource( 9 )

[node name="Enemys" type="Spatial" parent="."]

[node name="Enemy" parent="Enemys" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.8121, -196.623, -19.1133 )

[node name="Enemy2" parent="Enemys" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -12.8829, -28.3835, -1.49487 )
script = ExtResource( 13 )

[node name="Enemy3" parent="Enemys" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -48.3768, 0 )
script = ExtResource( 12 )

[connection signal="body_entered" from="Coins/coin" to="Coins/coin" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Coins/coin" to="Control/Coins_count" method="_on_coin_coinCollected"]
[connection signal="body_entered" from="Coins/coin2" to="Coins/coin2" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Coins/coin2" to="Control/Coins_count" method="_on_coin_coinCollected"]
[connection signal="body_entered" from="Coins/coin3" to="Coins/coin3" method="_on_coin_body_entered"]
[connection signal="coinCollected" from="Coins/coin3" to="Control/Coins_count" method="_on_coin_coinCollected"]
[connection signal="body_entered" from="PowerUps/HealPotion" to="PowerUps/HealPotion" method="_on_HealPotion_body_entered"]
[connection signal="healCollected" from="PowerUps/HealPotion" to="Control/Lives_count" method="_on_HealPotion_healCollected"]
[connection signal="body_entered" from="PowerUps/SpeedPotion" to="PowerUps/SpeedPotion" method="_on_SpeedPotion_body_entered"]
[connection signal="potionCollected" from="PowerUps/SpeedPotion" to="Player" method="_on_SpeedPotion_potionCollected"]
[connection signal="enemy" from="Control/Coins_count" to="Enemys/Enemy" method="_on_Coins_count_enemy"]
[connection signal="evenMoreCoins" from="Control/Coins_count" to="Coins/coin3" method="_on_Label2_evenMoreCoins"]
[connection signal="evenMoreEnemy" from="Control/Coins_count" to="Enemys/Enemy3" method="_on_Coins_count_evenMoreEnemy"]
[connection signal="goodChance" from="Control/Coins_count" to="PowerUps/HealPotion" method="_on_Coins_count_goodChance"]
[connection signal="goodChanceSpeed" from="Control/Coins_count" to="PowerUps/SpeedPotion" method="_on_Coins_count_goodChanceSpeed"]
[connection signal="moreCoins" from="Control/Coins_count" to="Coins/coin2" method="_on_Label2_moreCoins"]
[connection signal="moreEnemy" from="Control/Coins_count" to="Enemys/Enemy2" method="_on_Coins_count_moreEnemy"]
[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="youDead" from="Enemys/Enemy" to="Control/Lives_count" method="_on_Enemy_youDead"]
[connection signal="youDead" from="Enemys/Enemy2" to="Control/Lives_count" method="_on_Enemy_youDead"]
[connection signal="youDead" from="Enemys/Enemy3" to="Control/Lives_count" method="_on_Enemy_youDead"]
